--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,5 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="/WabaJVM"/>
 	<classpathentry kind="src" path="/Framework"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="lib"/>
 </classpath>
