added readme that gets copied to the top level during the distribution process part of this readme should be built automatically
git-svn-id: https://svn.concord.org/svn/projects/trunk/common/java/sensor/sensor@1177 6e01202a-0783-4428-890a-84243c50cc2b

--- a/build.xml
+++ b/build.xml
@@ -49,6 +49,9 @@
 			<zipfileset prefix="${jar-name}-src" dir="..">
 				<patternset refid="all-project-files"/>
 			</zipfileset>
+			<zipfileset prefix="${jar-name}-src" dir="doc">
+				<include name="dist-README.txt"/>
+			</zipfileset>
 		</zip>
 	</target>
 
@@ -59,7 +62,8 @@
 			<fileset dir="..">
 				<patternset refid="all-project-files"/>
 			</fileset>
-		</copy>
+			<fileset dir="doc" includes="dist-README.txt"/>
+		</copy>		
 	</target>
 	
 </project>
