added framework as a project dependency. added run-classpath to build.xml
git-svn-id: https://svn.concord.org/svn/projects/trunk/common/java/sensor/sensor@1415 6e01202a-0783-4428-890a-84243c50cc2b

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>Sensor</name>
 	<comment></comment>
 	<projects>
+		<project>Framework</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
