Refactored to make it more clear what a device implementor needs to do.
git-svn-id: https://svn.concord.org/svn/projects/trunk/common/java/sensor/sensor@2299 6e01202a-0783-4428-890a-84243c50cc2b

--- a/build.xml
+++ b/build.xml
@@ -70,4 +70,10 @@
 		</copy>		
 	</target>
 	
+	<target name="javadoc">
+		<javadoc classpathref="build-classpath" 
+			packagenames="org.concord.sensor, org.concord.sensor.cc, org.concord.sensor.device"
+			sourcepath="src" destdir="doc"/>
+	</target>
+	
 </project>
