More refactoring, and documenting.
git-svn-id: https://svn.concord.org/svn/projects/trunk/common/java/sensor/sensor@2357 6e01202a-0783-4428-890a-84243c50cc2b

--- a/build.xml
+++ b/build.xml
@@ -72,7 +72,7 @@
 	
 	<target name="javadoc">
 		<javadoc classpathref="build-classpath" 
-			packagenames="org.concord.sensor, org.concord.sensor.cc, org.concord.sensor.device"
+			packagenames="org.concord.sensor, org.concord.sensor.device"
 			sourcepath="src" destdir="doc"/>
 	</target>
 	
