package sensor.contrib was excluded before so Examples wouldn't compile. It's added back in.
git-svn-id: https://svn.concord.org/svn/projects/trunk/common/java/sensor/sensor@3465 6e01202a-0783-4428-890a-84243c50cc2b

--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="org/concord/sensor/contrib/|org/concord/sensor/meld/|org/concord/sensor/transformers/" kind="src" path="src"/>
+	<classpathentry excluding="org/concord/sensor/meld/|org/concord/sensor/transformers/" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="/WabaJVM"/>
 	<classpathentry kind="src" path="/Framework"/>
