Added zeroing sensor class.  And updated sensor data proxy to use this class.   Unfortunately this adds a dependency on Data because the TaringDataFilter is used to implement it.  We might have to clean this up, or at least update the filters used to build the Waba archives.
git-svn-id: https://svn.concord.org/svn/projects/trunk/common/java/sensor/sensor@6590 6e01202a-0783-4428-890a-84243c50cc2b

--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry sourcepath="/home/scott/ExtProjects/rxtx-2.1-7pre17/src" kind="lib" path="/thirdparty/RXTXcomm-2.1.7.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Framework"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Data"/>
 	<classpathentry kind="output" path="lib"/>
 </classpath>
