--- a/rxtx-maven2/rxtx-crossplatform/pom.xml
+++ b/rxtx-maven2/rxtx-crossplatform/pom.xml
@@ -12,7 +12,7 @@
   </parent>
   
   <groupId>org.concord.external.rxtx</groupId>
-  <artifactId>rxtx-cross-platform</artifactId>  
+  <artifactId>rxtx-crossplatform</artifactId>  
   <version>2.1.7</version>
   <packaging>pom</packaging>
   
