--- a/rxtx-maven2/rxtx-crossplatform/pom.xml
+++ b/rxtx-maven2/rxtx-crossplatform/pom.xml
@@ -7,39 +7,39 @@
   <parent>
     <groupId>org.concord</groupId>
     <artifactId>maven2-parent</artifactId>
-    <version>6</version>
+    <version>8</version>
     <relativePath>../Builds/maven2-parent</relativePath>
   </parent>
   
   <groupId>org.concord.external.rxtx</groupId>
   <artifactId>rxtx-crossplatform</artifactId>  
-  <version>2.1.7.1</version>
+  <version>2.1.7-r2</version>
   <packaging>pom</packaging>
   
   <dependencies>
     <dependency>
       <groupId>org.concord.external.rxtx</groupId>
       <artifactId>rxtx-comm</artifactId>
-      <version>2.1.7</version>
+      <version>2.1.7-r2</version>
     </dependency>
     <dependency>
       <groupId>org.concord.external.rxtx</groupId>
       <artifactId>rxtx-serial</artifactId>
-      <version>2.1.7.1</version>
+      <version>2.1.7-r2</version>
       <classifier>linux</classifier>
       <type>nar</type>
     </dependency>
     <dependency>
       <groupId>org.concord.external.rxtx</groupId>
       <artifactId>rxtx-serial</artifactId>
-      <version>2.1.7.1</version>
+      <version>2.1.7-r2</version>
       <classifier>win32</classifier>
       <type>nar</type>
     </dependency>
     <dependency>
       <groupId>org.concord.external.rxtx</groupId>
       <artifactId>rxtx-serial</artifactId>
-      <version>2.1.7.1</version>
+      <version>2.1.7-r2</version>
       <classifier>macosx</classifier>
       <type>nar</type>
     </dependency>
