--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
     <dependency>
       <groupId>org.concord.external.rxtx</groupId>
       <artifactId>rxtx-comm</artifactId>
-      <version>2.1.7</version>
+      <version>2.1.7-r2</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
