cvs2svn: modified .project, .classpath, *.launch to reflect new project names
git-svn-id: https://svn.concord.org/svn/projects/trunk/common/java/sensor/sensor@8572 6e01202a-0783-4428-890a-84243c50cc2b

--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry excluding="org/concord/sensor/meld/|org/concord/sensor/transformers/" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry sourcepath="/home/scott/ExtProjects/rxtx-2.1-7pre17/src" kind="lib" path="/thirdparty/RXTXcomm-2.1.7.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Framework"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Data"/>
+	<classpathentry sourcepath="/home/scott/ExtProjects/rxtx-2.1-7pre17/src" kind="lib" path="/thirdparty-jars/RXTXcomm-2.1.7.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/framework"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/data"/>
 	<classpathentry kind="output" path="lib"/>
 </classpath>
