--- a/.project
+++ b/.project
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Sensor</name>
+	<name>sensor</name>
 	<comment></comment>
 	<projects>
-		<project>Framework</project>
+		<project>framework</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
