--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.concord</groupId>
-    <artifactId>maven2-parent</artifactId>
-    <version>6</version>
-    <relativePath>../Builds/maven2-parent</relativePath>
+    <groupId>org.concord.project-groups</groupId>
+    <artifactId>sensor</artifactId>
+    <version>2</version>
   </parent>
   
   <groupId>org.concord</groupId>
@@ -55,17 +54,7 @@
   	</plugins>
   </build>
 
-
-  <properties>
-    <concordDir>${project.name}</concordDir>
-  </properties>
-
-  <!--MVN_AUTO 
-    This comment and the elements below it are automatically 
-    generated any changes you make to these elements will be replaced if the pom is
-    regenerated. Do not edit this comment or the elements below it.-->
-
-  <!--this is required to find out parent pom you should-->
+  <!--this is required to find the parent pom -->
   <repositories>
     <repository>
       <id>cc-repo-internal</id>
@@ -75,19 +64,4 @@
     </repository>
   </repositories>
 
-  <!--This has to be defined in each pom because maven changes these urls
-     automatically when they are inherited.  It adds the "this" artifactId 
-     to the url specified in the parent.  If the parent defined a modules
-     element then it is supposed to use the path in that modules element.-->
-  <scm>
-    <connection>
-      scm:cvs:pserver:anonymous:@source.concord.org:/cvs/repo/CodeBank:Projects/${concordDir}
-    </connection>
-    <developerConnection>
-      scm:cvs:ext:username@cvs.concord.org:/home/buildspace/CodeBank:Projects/${concordDir}
-    </developerConnection>
-    <url>
-      http://source.concord.org/cgi-bin/viewcvs.cgi/Projects/${concordDir}/?cvsroot=CodeBank
-    </url>
-  </scm>
 </project>
