--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,8 @@
   			<groupId>org.apache.maven.plugins</groupId>
   			<artifactId>maven-compiler-plugin</artifactId>
   			<configuration>
+                <source>1.5</source>
+                <target>1.5</target>
   				<excludes>
   					<exclude>org/concord/sensor/meld/**</exclude>
   					<exclude>
