exclude tests: they require user interaction
git-svn-id: https://svn.concord.org/svn/projects/trunk/common/java/sensor/sensor@23820 6e01202a-0783-4428-890a-84243c50cc2b

--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,15 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <excludes>
+            <!-- don't run any of the tests automatically because they currently popup dialogs -->
+            <exclude>org/concord/sensor/**</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
